# inland-consequences

./: .gitattributes  .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html
.github/instructions/: memory.instructions.md
.github/workflows/: ci.yml  deploy.yml  release.yml
AAL_tech_implementation/: index.html
api/: index.html
api/inland_consequences/inland_flood_analysis/: index.html
api/inland_consequences/inland_vulnerability/: index.html
api/inland_consequences/milliman_buildings/: index.html
api/inland_consequences/nsi_buildings/: index.html
api/inland_consequences/raster_collection/: index.html
api/inland_consequences/results_aggregation/: index.html
api/sphere_core/abstract_raster_reader/: index.html
api/sphere_core/abstract_vulnerability_function/: index.html
building_inventories/: index.html
buildingvalidation_techapproach/: index.html
coastal_methodology/: index.html
contributing/: index.html
data/: Damage_Function_Deliverable_2-5-2024.xlsx  README.md  foundation_flood_table.csv  foundation_flood_table_cont1.csv  foundation_flood_table_cont2.csv  foundation_flood_table_inv.csv  foundation_flood_table_structures.csv
data/source_data/: OpenHazusDDFUpdates_2025.xlsx  Task4d_Updated_FloodDF_Approach-20240213.xlsx
ddf_tech_implementation/: index.html
docs/: AAL_tech_implementation.md  building_inventories.md  buildingvalidation_techapproach.md  coastal_methodology.md  contributing.md  ddf_tech_implementation.md  gh_installation.md  hazardvalidation_techapproach.md  index.md  inland_methodology.md  inventory_methodology.md  placeholder.md  prototype_notebooks.md  tasks.md  user-requirements.md
docs/api/: index.md
docs/javascripts/: katex.js
docs/schemas/: buildings_schema.json  milliman_schema.json  nsi_schema.json
docs/stylesheets/: extra.css
examples/: flood_results_explorer.py  single_return_period_app.py  single_return_period_run.py  sql_builder.py  utils.py
examples/Duwamish/: aep_mean_depth_1000yr_sample_EPSG4326.tif  aep_mean_depth_100yr_sample_EPSG4326.tif  aep_mean_depth_10yr_sample_EPSG4326.tif  aep_mean_depth_2000yr_sample_EPSG4326.tif  aep_mean_depth_200yr_sample_EPSG4326.tif  aep_mean_depth_20yr_sample_EPSG4326.tif  aep_mean_depth_500yr_sample_EPSG4326.tif  aep_mean_depth_50yr_sample_EPSG4326.tif  aep_mean_depth_sample_EPSG4326.tif  aep_mean_velocity_1000yr_sample_EPSG4326.tif  aep_mean_velocity_100yr_sample_EPSG4326.tif  aep_mean_velocity_10yr_sample_EPSG4326.tif  aep_mean_velocity_2000yr_sample_EPSG4326.tif  aep_mean_velocity_200yr_sample_EPSG4326.tif  aep_mean_velocity_20yr_sample_EPSG4326.tif  aep_mean_velocity_500yr_sample_EPSG4326.tif  aep_mean_velocity_50yr_sample_EPSG4326.tif  aep_mean_velocity_sample_EPSG4326.tif  aep_stdev_depth_1000yr_sample_EPSG4326.tif  aep_stdev_depth_100yr_sample_EPSG4326.tif  aep_stdev_depth_10yr_sample_EPSG4326.tif  aep_stdev_depth_2000yr_sample_EPSG4326.tif  aep_stdev_depth_200yr_sample_EPSG4326.tif  aep_stdev_depth_20yr_sample_EPSG4326.tif  aep_stdev_depth_500yr_sample_EPSG4326.tif  aep_stdev_depth_50yr_sample_EPSG4326.tif  aep_stdev_depth_sample_EPSG4326.tif  aep_stdev_velocity_1000yr_sample_EPSG4326.tif  aep_stdev_velocity_100yr_sample_EPSG4326.tif  aep_stdev_velocity_10yr_sample_EPSG4326.tif  aep_stdev_velocity_2000yr_sample_EPSG4326.tif  aep_stdev_velocity_200yr_sample_EPSG4326.tif  aep_stdev_velocity_20yr_sample_EPSG4326.tif  aep_stdev_velocity_500yr_sample_EPSG4326.tif  aep_stdev_velocity_50yr_sample_EPSG4326.tif  aep_stdev_velocity_sample_EPSG4326.tif  milliman_ucmb.csv  milliman_ucmb.parquet  milliman_uniform.csv  milliman_uniform.parquet  (+1 more)
examples/Goldsmith/: GG_100yr_Depth_05ft_wgs84.tif  GG_100yr_Vel_Max_01ft_wgs84.tif  GG_100yr_Vel_Max_05ft_wgs84.tif  milliman_ucmb.csv  milliman_uniform.csv
examples/goldsmith_co_hazard_data/: GG_100yr_Depth_05ft.tif  GG_100yr_Duration_hrs_05ft.tif  GG_100yr_Duration_hrs_05ft_wgs84.tif  GG_100yr_Vel_Max_01ft.tif  GG_100yr_Vel_Max_05ft.tif  milliman_ucmb.parquet  milliman_uniform.parquet  nsi_2022_08_subset.parquet
examples/notebooks/: flood_results_explorer.py  run_coastal_consequences.py  run_inland_consequences.py  utils.py
examples/sql_templates/: README.md  export_wide_reference.sql
gh_installation/: index.html
hazardvalidation_techapproach/: index.html
inland_methodology/: index.html
inventory_methodology/: index.html
placeholder/: index.html
prototype_notebooks/: index.html
schemas/: milliman_schema.json  nsi_schema.json
scripts/: create_goldsmith_co_test_data.py  ddf_creation.py  ddf_creation_cont.py  ddf_creation_inv.py  df_extract_curves.py  export_sqlserver_to_parquet.py  flsbt_generate.py  match_ddf.py  run_duwamish_analysis.py  working-gather-dfs.py
search/: search_index.json
src/inland_consequences/: __init__.py  _smoke.py  inland_flood_analysis.py  inland_vulnerability.py  milliman_buildings.py  nsi_buildings.py  raster_collection.py  results_aggregation.py
stylesheets/: extra.css
tasks/: index.html
tests/: __init__.py  conftest.py  pytest.ini  test_buildings_fields.py  test_damage_function_lookup_tables.py  test_default_vulnerability_interp.py  test_gather_damage_functions.py  test_hazus_flood_analysis.py  test_hazus_integration.py  test_inland_flood_analysis.py  test_inland_flood_analysis_validation.py  test_losses_and_aal.py  test_milliman_buildings.py  test_nsi_buildings.py  test_raster_collection.py  test_results_aggregation.py  test_single_value_reader.py  test_smoke.py  test_wildcard_matching.py
user-requirements/: index.html
(+2218 files in other folders)
