[project]
name = "inland-consequences"
version = "0.0.1"
description = "Inland Consequences Estimation Methodology"
dependencies = [
  "mkdocs-macros-plugin",
  "mkdocs-include-markdown-plugin",
  "mdformat",
  "mdformat-gfm",
  "mdformat-myst",
  "pymdown-extensions",
  "pre-commit",
  "sphere-core",
  "sphere-data",
  "sphere-flood",
  "pandas>=2.3.3",
  "logging>=0.4.9.6",
  "scipy>=1.15.3",
  "polars>=1.35.2",
  "typing==3.7.4.3",
  "duckdb>=1.4.3",
  "pyarrow>=22.0.0",
  "marimo>=0.20.2",
  "pydantic-ai>=1.63.0",
  "folium>=0.20.0",
  "lonboard",
  "matplotlib",
]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/data",
    "packages/flood",
]

[tool.uv.sources]
sphere-flood = { workspace = true }
sphere-core = { workspace = true }
sphere-data = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include the top-level `src` and each package's `src` so the wheel
# will find packages located under those directories.
packages = [
    "src/inland_consequences",
    "packages/core/src/sphere",
    "packages/data/src/sphere",
    "packages/flood/src/sphere",
]

[tool.hatch.build.targets.sdist]
packages = [
    "src/inland_consequences",
    "packages/core/src/sphere",
    "packages/data/src/sphere",
    "packages/flood/src/sphere",
]

[dependency-groups]
dev = [
    "pyarrow>=22.0.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.15.1",
]

[tool.mdformat]
wrap = "no"
number = false

[tool.pytest.ini_options]
# This is present here for running from the command line
markers = [
    "manual: mark test to run only when specifically requested (uv run pytest -m manual)"
]

[tool.marimo.runtime]
output_max_bytes = 10_000_000
