[project]
name = "inland-consequences"
version = "0.1.0"
description = "Inland Consequences Estimation Methodology"
dependencies = [
  "mkdocs-material",
  "mkdocs-macros-plugin",
  "mkdocs-include-markdown-plugin",
  "mkdocstrings[python]",
  "mdformat",
  "mdformat-gfm",
  "mdformat-myst",
  "mdformat-admon",
  "pymdown-extensions",
  "pre-commit",
  "sphere-core",
  "sphere-data",
  "sphere-flood",
  "pandas>=2.3.3",
  "logging>=0.4.9.6",
  "scipy>=1.15.3",
  "polars>=1.35.2",
  "typing==3.7.4.3",
  "duckdb>=1.5.0",
  "pyarrow>=22.0.0",
  "folium>=0.20.0",
  "lonboard",
  "altair>=6.0.0",
  "marimo>=0.20.3",
  "great-tables>=0.21.0",
  "pygris>=0.2.1",
  "matplotlib>=3.10.8",
]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/data",
    "packages/flood",
]

[tool.uv.sources]
sphere-flood = { workspace = true }
sphere-core = { workspace = true }
sphere-data = { workspace = true }

[project.urls]
Homepage = "https://fema-ffrd.github.io/inland-consequences/"
Repository = "https://github.com/fema-ffrd/inland-consequences"

[project.scripts]
inland-consequences-check = "inland_consequences._smoke:verify"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include the top-level `src` and each package's `src` so the wheel
# will find packages located under those directories.
packages = [
    "src/inland_consequences",
    "packages/core/src/sphere",
    "packages/data/src/sphere",
    "packages/flood/src/sphere",
]

[tool.hatch.build.targets.sdist]
packages = [
    "src/inland_consequences",
    "packages/core/src/sphere",
    "packages/data/src/sphere",
    "packages/flood/src/sphere",
]

[tool.hatch.build]
include = [
    "src/inland_consequences/**",
    "packages/core/src/sphere/**",
    "packages/data/src/sphere/**",
    "packages/flood/src/sphere/**"
]
exclude = [
    "src/inland_consequences/coastal/tests/**"
]

[dependency-groups]
dev = [
    "pyarrow>=22.0.0",
    "pyodbc>=5.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.15.1",
    "build",
]

[tool.mdformat]
wrap = "no"
number = false

[tool.pytest.ini_options]
# This is present here for running from the command line
markers = [
    "manual: mark test to run only when specifically requested (uv run pytest -m manual)"
]

[tool.marimo.runtime]
output_max_bytes = 10_000_000
